--- a/Brainwriter/res/values/strings.xml
+++ b/Brainwriter/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">Brainwriter</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    
+    <string name="title_section1">Groups</string>
+    <string name="title_section2">Ideas</string>
+    <string name="title_section3">Favorites</string>
+    <string name="title_section4">Credentias</string>
 
 </resources>
