added xmls, images...

--- a/Brainwriter/res/values/strings.xml
+++ b/Brainwriter/res/values/strings.xml
@@ -8,5 +8,17 @@
     <string name="title_section2">New group</string>
     <string name="title_section3">Stuff</string>
     <string name="group_name">Enter group name..</string>
-
+	<string name="idea">Idea</string>
+	
+	<string name="total">Total: def</string>
+	<string name="round">Round</string>
+	
+	<string name="group_status_name">Group: name</string>
+	<string name="group_status_time">Time: none</string>
+	<string name="group_status_total">Total: 35 ideas</string>
+	<string name="group_status_round">Round: 2</string>
+	
+	<string name="default_description">Default description</string>
+	
+	
 </resources>
