fixed warnings and added strings to /values/strings

--- a/Brainwriter/res/values/strings.xml
+++ b/Brainwriter/res/values/strings.xml
@@ -20,5 +20,6 @@
 	
 	<string name="default_description">Default description</string>
 	
+	<string name="username_hint">Username..</string>
 	
 </resources>
