updated layouts, added results views

--- a/Brainwriter/res/values/strings.xml
+++ b/Brainwriter/res/values/strings.xml
@@ -22,4 +22,7 @@
 	
 	<string name="username_hint">Username..</string>
 	
+	<string name="group_results">Group name</string>
+	<string name="round_number">Round number</string>
+	
 </resources>
