--- a/Brainwriter/res/values/strings.xml
+++ b/Brainwriter/res/values/strings.xml
@@ -14,7 +14,7 @@
 	<string name="round">Round</string>
 	
 	<string name="group_status_name">Group: </string>
-	<string name="group_status_time">Time: none</string>
+	<string name="group_status_time"></string>
 	<string name="group_status_total">Total: 35 ideas</string>
 	<string name="group_status_round">Round: 2</string>
 	
