--- a/Brainwriter/res/values/strings.xml
+++ b/Brainwriter/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_section1">Groups</string>
     <string name="title_section2">New group</string>
-    <string name="title_section3">Stuff</string>
+    <string name="title_section3">Settings</string>
     <string name="group_name">Enter group name..</string>
 	<string name="idea">Idea</string>
 	<string name="total">Total: def</string>
